Add "add/subtract percentage" functionality

BUG: 489027